kubectl-pod.yml
################################
# Equivalent command of docker for below yml code
# docker run -d ngnix:1.14.2 --name ngnix 80:80
################################

apiVersion: v1
kind: Pod
metadata:
  name: kubectl-pod
spec:
  serviceAccount: custom-service-account
  containers:
  - name: kubectl
    image: bitnami/kubectl:1.20.9
