pod.yml
################################
# Equivalent command of docker for below yml code
# docker run -d ngnix:1.14.2 --name ngnix 80:80
################################

apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
