service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-sample-app # app name
spec:
  type: NodePort
  selector:
    app: python-app # label name
  ports:
    - port: 80 # port of service
      targetPort: 8000 # port of pod
      nodePort: 30007 # port of node
