ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example # ingress name
spec:
  rules:
  - host: "foo.bar.com" # host name
    http:
      paths:
      - pathType: Prefix
        path: / # we can specify path here for path based loadbalancing
        backend:
          service:
            name: python-sample-app # service name
            port:
              number: 80 # port of service
